Accept messages from other networks on loopback

Kernel does smart things and routes traffic sent to other networks
through loopback. We need to accept messages like that.

https://bugzilla.gnome.org/show_bug.cgi?id=733851